<resources>
    <string name="app_name">CalciiPou</string>
    <string name="Clear">C</string>
    <string name="paranthesis">(</string>
    <string name="paranthesis2">)</string>
    <string name="Exponent">^</string>
    <string name="Divide">÷</string>
    <string name="Multiply">×</string>
    <string name="Plus">+</string>
    <string name="Minus">-</string>
    <string name="SquareRoot">sqrt</string>
    <string name="Equal">=</string>
    <string name="Logarithm">.</string>
    <string name="Tangent">%</string>
    <string name="Zero">0</string>
    <string name="One">1</string>
    <string name="Two">2</string>
    <string name="Three">3</string>
    <string name="Four">4</string>
    <string name="Five">5</string>
    <string name="Six">6</string>
    <string name="Seven">7</string>
    <string name="Eight">8</string>
    <string name="Nine">9</string>
    <string name="display">Enter here...</string>
    <string name="Answer">Ans</string>
    <string name="Back"> </string>
</resources>