<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/textView"
        android:layout_width="320dp"
        android:layout_height="53dp"
        android:autofillHints="false"
        android:background="@color/black"
        android:fontFamily="serif"
        android:inputType="none"
        android:text="@string/display"
        android:textAlignment="textEnd"
        android:textColor="@color/white"
        android:textCursorDrawable="@color/white"
        android:textSize="40sp"
        app:layout_constraintBottom_toTopOf="@+id/tableLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.148"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.639"
        app:layout_goneMarginBottom="50dp"
        tools:ignore="LabelsFor" />

    <TableLayout
        android:id="@+id/tableLayout"
        android:background="#000000"
        android:layout_marginTop="250dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.14"
        app:layout_constraintStart_toStartOf="parent">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/clearSc"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:layout_weight="1"
                android:background="@drawable/circle"
                android:backgroundTint="#FF0000"
                android:onClick="clearSc"
                android:text="@string/Clear"
                android:textSize="30sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/EqualSign"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:layout_weight="1"
                android:background="@drawable/circle"
                android:onClick="EqualTo"
                android:text="@string/Equal"
                android:textSize="30sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/Expo"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:layout_weight="1"
                android:background="@drawable/circle"
                android:onClick="ExpoBTN"
                android:text="@string/Exponent"
                android:textSize="30sp"
                android:textStyle="bold" />

            <ImageButton
                android:id="@+id/imageButton"
                android:layout_width="59dp"
                android:layout_height="52dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/tri"
                android:onClick="Del"
                android:text="@string/Back"
                app:srcCompat="@drawable/backsp" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/ZeroNum"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:layout_weight="1"
                android:background="@drawable/circle"
                android:onClick="ZeroBTN"
                android:text="@string/Zero"
                android:textSize="30sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/NIneNum"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:layout_weight="1"
                android:background="@drawable/circle"
                android:onClick="NineBTN"
                android:text="@string/Nine"
                android:textSize="30sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/EightNum"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:layout_weight="1"
                android:background="@drawable/circle"
                android:onClick="EightBTN"
                android:text="@string/Eight"
                android:textSize="30sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/Multi"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:layout_weight="1"
                android:background="@drawable/circle"
                android:onClick="MultiBTN"
                android:text="@string/Multiply"
                android:textSize="30sp"
                android:textStyle="bold" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/SvenN"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:layout_weight="1"
                android:background="@drawable/circle"
                android:onClick="SevenBTN"
                android:text="@string/Seven"
                android:textSize="30sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/sixNum"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:layout_weight="1"
                android:background="@drawable/circle"
                android:onClick="SixBTN"
                android:text="@string/Six"
                android:textSize="30sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/FiveNum"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:layout_weight="1"
                android:background="@drawable/circle"
                android:onClick="FiveBTN"
                android:text="@string/Five"
                android:textSize="30sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/Divi"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:layout_weight="1"
                android:background="@drawable/circle"
                android:onClick="DiviBTN"
                android:text="@string/Divide"
                android:textSize="30sp"
                android:textStyle="bold" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/FourNum"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:layout_weight="1"
                android:background="@drawable/circle"
                android:onClick="FourBTN"
                android:text="@string/Four"
                android:textSize="30sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/ThreeNum"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:layout_weight="1"
                android:background="@drawable/circle"
                android:onClick="ThreeBTN"
                android:text="@string/Three"
                android:textSize="30sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/TwoNum"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:layout_weight="1"
                android:background="@drawable/circle"
                android:onClick="TwoBTN"
                android:text="@string/Two"
                android:textSize="30sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/Point"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:layout_weight="1"
                android:background="@drawable/circle"
                android:onClick="SubBTN"
                android:text="@string/Minus"
                android:textSize="30sp"
                android:textStyle="bold" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/OneNum"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:layout_weight="1"
                android:background="@drawable/circle"
                android:onClick="OneBTN"
                android:text="@string/One"
                android:textSize="30sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/brack"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:layout_weight="1"
                android:background="@drawable/circle"
                android:onClick="openParan"
                android:text="@string/paranthesis"
                android:textSize="30sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/brack2"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:layout_weight="1"
                android:background="@drawable/circle"
                android:onClick="closeParan"
                android:text="@string/paranthesis2"
                android:textSize="30sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/PlusSign"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_margin="10dp"
                android:layout_weight="1"
                android:background="@drawable/circle"
                android:onClick="AddBTN"
                android:text="@string/Plus"
                android:textSize="30sp"
                android:textStyle="bold" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Button
                android:id="@+id/Deci"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:layout_weight="1"
                android:background="@drawable/circle"
                android:onClick="DeciBTN"
                android:text="@string/Logarithm"
                android:textSize="22sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/tangentSign"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:layout_weight="1"
                android:background="@drawable/circle"
                android:onClick="tanBTN"
                android:text="@string/Tangent"
                android:textSize="22sp"
                android:textStyle="bold" />

        </TableRow>
    </TableLayout>

</android.support.constraint.ConstraintLayout>